# vector-etl-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  test_data.geojson
.github/workflows/: ci.yml
benchmarks/: baseline_results.json  summarize_results.py
docs/: CONTRIBUTING.md  api.md  architecture.md  blog-post.md  design-decisions.md  performance.md
examples/: README.md
src/: cli.py
src/config/: settings.py
src/pipeline/: cleaner.py  loader.py  validator.py
tests/: conftest.py
tests/integration/: test_loader.py  test_loader_integration.py
tests/performance/: test_benchmarks.py
tests/unit/: test_cleaner.py  test_loader.py  test_validator.py
