[tool.poetry]
name = "vector-etl-pipeline"
version = "0.1.0"
description = "Production ETL pipeline for geospatial vector data"
authors = ["James Ngei"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
geopandas = "^1.1.2"
shapely = "^2.1.2"
sqlalchemy = "^2.0.45"
psycopg = {extras = ["binary"], version = "^3.3.2"}
psycopg2-binary = "^2.9.11"
click = "^8.3.1"
geoalchemy2 = "^0.18.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
black = "^25.12.0"
ruff = "^0.14.10"
mypy = "^1.19.1"

[tool.poetry.scripts]
vector-etl = "src.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"